# codex_task_test

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: fibonacci.py
src/fibonacci/: __init__.py  cli.py  core.py
tests/: test_basic.py  test_bench.py  test_fibonacci.py  test_properties.py
tools/: ci_selfcheck.py
