[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci-toolkit"
version = "0.1.0"
description = "Fibonacci toolkit with multiple implementations and CLI"
authors = [{name = "Codex"}]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
fib = "fibonacci.cli:main"
